Fix IntelliJ warnings